<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rec_w">

    <TextView android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center"
        android:text="@string/warning"
        android:textColor="@color/Black_33"
        android:textSize="@dimen/text_size_big"/>

    <TextView android:id="@+id/tv_dialog_msg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center"
        android:text="@string/tv_device_update_delete_all_data"
        android:textColor="@color/Black_33"
        android:textSize="@dimen/text_size_medium"
        android:typeface="serif"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:gravity="center">

        <TextView android:id="@+id/tv_btn_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:layout_marginRight="6dp"
            android:layout_marginEnd="6dp"
            android:gravity="center"
            android:background="@drawable/selector_btn_positive"
            android:text="@string/yes"
            android:textColor="@color/White"/>

        <TextView android:id="@+id/tv_btn_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:gravity="center"
            android:background="@drawable/selector_btn_negative"
            android:text="@string/no"
            android:textColor="@color/Black_33"/>

    </LinearLayout>

</LinearLayout>