<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingBottom="15dp"
    android:layout_marginTop="15dp"
    >

    <ImageView
        android:id="@+id/viatom_logo"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:src="@drawable/viatom_logo1" />

    <TextView
        android:id="@+id/policy_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/policy_dialog_title"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/policy_declare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="3dp"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="@string/policy_declare"
        />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/viatom_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/viatom_term_text"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingBottom="10dp"
                android:text="@string/policy_confirm"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical">
                <TextView
                    android:id="@+id/privacy_policy_text"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:paddingBottom="10dp"
                    android:text="@string/policy_reconfirm"/>
            </ScrollView>

        </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp">

        <Button
            android:id="@+id/btn_disagree"
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:layout_weight="5"
            android:background="@color/DarkGray"
            android:text="@string/cancel"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_agree"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"

            android:layout_weight="5"
            android:background="@color/DarkGray"
            android:text="@string/i_agree"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:textSize="18sp"
            android:clickable="false"/>

    </LinearLayout>

</LinearLayout>