<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/ListSPO2ReMainPaddingTB"
    android:paddingLeft="@dimen/ListSPO2ReMainPaddingLR"
    android:paddingRight="@dimen/ListSPO2ReMainPaddingLR"
    android:paddingTop="@dimen/ListSPO2ReMainPaddingTB" >

    <LinearLayout
        android:id="@+id/ListSPO2LinearDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/ListSPO2TextTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/time"
            android:textColor="@color/Black"
            android:textSize="@dimen/ListSPO2TextTimeTextSize" />

        <TextView
            android:id="@+id/ListSPO2TextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/ListSPO2TextDateTimeDis"
            android:text="@string/date"
            android:textColor="@color/Gray"
            android:textSize="@dimen/ListSPO2TextDateTextSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ListSPO2LinearResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ListSPO2ImgResult"
            android:layout_width="@dimen/ListSPO2ImgResultWH"
            android:layout_height="@dimen/ListSPO2ImgResultWH"
            android:layout_gravity="center_vertical"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/ListSPO2TextOxygen"
            android:layout_width="@dimen/ListSPO2TextSPO2W"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/ListSPO2TextResultMarginLeft"
            android:background="@drawable/border_item_result"
            android:text="result"
            android:textColor="@color/White"
            android:textSize="@dimen/ListSPO2TextResultTextSize"
            android:gravity="center" />

        <TextView
            android:id="@+id/ListSPO2TextPR"
            android:layout_width="@dimen/ListSPO2TextPRW"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/ListSPO2TextResultMarginLeft"
            android:background="@drawable/border_item_result"
            android:text="@string/pr"
            android:textColor="@color/White"
            android:textSize="@dimen/ListSPO2TextResultTextSize"
            android:gravity="center" />

        <TextView
            android:id="@+id/ListSPO2TextPI"
            android:layout_width="@dimen/ListSPO2TextPIW"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/ListSPO2TextResultMarginLeft"
            android:background="@drawable/border_item_result"
            android:text="@string/pi"
            android:textColor="@color/White"
            android:textSize="@dimen/ListSPO2TextResultTextSize"
            android:gravity="center"
            android:visibility="gone"/>
    </LinearLayout>

</RelativeLayout>