<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ListBkg" >

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/tv_checkme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/app_name"
        android:textSize="25sp" />

    <Button
        android:id="@+id/bn_update"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/tv_checkme"
        android:layout_centerHorizontal="true"
        android:textColor="@color/White"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_blue"
        android:text="@string/update"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/tv_checkme">

        <TextView
            android:id="@+id/tv_disclaimer_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bottom_line"
            android:drawableRight="@drawable/ic_arrow_forward"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:gravity="center_vertical"
            android:text="@string/tv_about_this_app"
            android:textColor="@color/Black_33"
            android:textSize="@dimen/text_size_normal"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:background="@drawable/bg_bottom_line">

            <TextView
                android:id="@+id/tv_version_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_label"
                android:textColor="@color/Black_33"
                android:textSize="@dimen/text_size_normal"/>

            <TextView
                android:id="@+id/tv_version_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="1.0.0"
                android:textColor="@color/Black_33"
                android:textSize="@dimen/text_size_normal"/>

        </RelativeLayout>




    </LinearLayout>


    <!-- <TextView
        android:id="@+id/tv_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="©2014 Viatom Technology Co., Ltd. All Right Reserved."
        android:textColor="@color/DarkGray"
        android:textSize="15sp" /> -->

</RelativeLayout>